# BaryTree

./: .cproject  .gitignore  .project  CMakeLists.txt  INSTALL  INSTALL.md  LICENSE  README  README.md  cmake-build-instructions.rtf
examples/: .gitignore  CMakeLists.txt  PBSscript  README  README.md  S10000py.txt  T1000py.txt  example.in  example_pc_tree_run.sh  exec_example_cpu.sh  exec_example_gpu.sh  flux_details  library_example.c  make_points.py  openACC_details  out.tsv  random_cube.c  random_cube_large.c  random_cube_reproducible.c  run_readin.c  run_readin_rism.c  script.PBS  support_fns.c  support_fns.h  testBaryTreeInterface.c  test_BaryTreeInterface.c  zoltan_example.c  zoltan_example_large.c  zoltan_fns.c  zoltan_fns.h
examples/dataFiles/: mpi_subtraction_tests_9992266.gl1005.out
src/: .gitignore  BaryTreeInterface.c  BaryTreeInterface.h  CMakeLists.txt  Makefile  addr2line  array.h  batch.h  batchScriptDirectSum.sh  batchScriptTreecode.sh  batches.c  batches.h  blowingUpPreprocTime  clusters.c  clusters.h  clusters_cp.c  clusters_struct.h  const.h  direct.c  direct.h  directSum_yuk_coulomb_comparison_with03  directdriver.c  directdriver.h  fluxProfileTreecode.sh  fluxRunDirectSum.sh  fluxRunTreecode.sh  fluxRunTreecode_additionalMeshes.sh  generateSampleData.py  globvars.h  gputc.24904580.comet-33-12.out  interaction-masks.c  interaction-masks.h  interaction_compute.c  interaction_compute.h  interaction_compute_cc.c  interaction_compute_cp.c  interaction_compute_pc.c  interaction_lists.c  interaction_lists.h  interaction_lists_cc.c  (+75 more)
src/clusters/: clusters.c  clusters.h  clusters_cp.c  struct_clusters.h
src/comm_cp/: comm_cp.c  comm_cp.h
src/comm_types/: comm_types.c  comm_types.h  struct_comm_types.h
src/comm_windows/: comm_windows.c  comm_windows.h  struct_comm_windows.h
src/drivers/: directdriver.c  directdriver.h  treedriver.c  treedriver.h
src/interaction_compute/: interaction_compute.h  interaction_compute_cc.c  interaction_compute_correction.c  interaction_compute_cp.c  interaction_compute_direct.c  interaction_compute_downpass.c  interaction_compute_pc.c
src/interaction_lists/: interaction_lists.c  interaction_lists.h  interaction_lists_cc.c  interaction_lists_cp_remote.c  struct_interaction_lists.h
src/interface/: BaryTreeInterface.c  BaryTreeInterface.h
src/kernels/: Coulomb.c  CoulombSingularitySubtraction.c  README.md  ScreenedCoulomb.c  ScreenedCoulombSingularitySubtraction.c  atan.c  atan.h  coulomb.c  coulomb.cu  coulomb.h  coulombSingularitySubtraction.c  coulombSingularitySubtraction.h  coulomb_singularity_subtraction.c  coulomb_singularity_subtraction.h  cp_coulomb.c  cp_coulomb.h  dcf.c  dcf.h  kernels.c  kernels.h  kernels_direct.c  kernels_direct.h  notes-on-adding-new-kernels.rtf  regularized-coulomb-singularity-subtraction.c  regularized-coulomb-singularity-subtraction.h  regularized-coulomb.c  regularized-coulomb.h  regularized-yukawa-singularity-subtraction.c  regularized-yukawa-singularity-subtraction.h  regularized-yukawa.c  regularized-yukawa.h  tcf.c  yukawa.c  yukawa.h  yukawaSingularitySubtraction.c  yukawaSingularitySubtraction.h  yukawa_singularity_subtraction.c  yukawa_singularity_subtraction.h
src/kernels/atan/: atan.h  atan_direct.c  atan_direct.h  atan_pc.c  atan_pc.h  atan_pp.c  atan_pp.h
src/kernels/coulomb/: coulomb.h  coulomb_cc_hermite.c  coulomb_cc_hermite.h  coulomb_cp.c  coulomb_cp.h  coulomb_direct.c  coulomb_direct.h  coulomb_pc.c  coulomb_pc.h  coulomb_pp.c  coulomb_pp.h  coulomb_ss_cc.c  coulomb_ss_cc.h  coulomb_ss_correction.c  coulomb_ss_correction.h  coulomb_ss_cp.c  coulomb_ss_cp.h  coulomb_ss_direct.c  coulomb_ss_direct.h  coulomb_ss_pc.c  coulomb_ss_pc.h  coulomb_ss_pp.c  coulomb_ss_pp.h
src/kernels/dcf/: dcf.c  dcf.h  dcf_cc_hermite.c  dcf_cc_hermite.h  dcf_cp.c  dcf_cp.h  dcf_direct.c  dcf_direct.h  dcf_pc.c  dcf_pc.h  dcf_pp.c  dcf_pp.h
src/kernels/mq/: mq.h  mq_direct.c  mq_direct.h  mq_pc.c  mq_pc.h  mq_pp.c  mq_pp.h
src/kernels/rbs-u/: rbs-u.h  rbs-u_cp.c  rbs-u_cp.h  rbs-u_pc.c  rbs-u_pc.h  rbs-u_pp.c  rbs-u_pp.h
src/kernels/rbs-v/: rbs-v.h  rbs-v_cp.c  rbs-v_cp.h  rbs-v_pc.c  rbs-v_pc.h  rbs-v_pp.c  rbs-v_pp.h
src/kernels/regularized-coulomb/: regularized-coulomb.h  regularized-coulomb_PP.h  regularized-coulomb_cp.c  regularized-coulomb_cp.h  regularized-coulomb_direct.c  regularized-coulomb_direct.h  regularized-coulomb_pc.c  regularized-coulomb_pc.h  regularized-coulomb_pp.c  regularized-coulomb_pp.h  regularized-coulomb_ss_correction.c  regularized-coulomb_ss_correction.h  regularized-coulomb_ss_direct.c  regularized-coulomb_ss_direct.h  regularized-coulomb_ss_pc.c  regularized-coulomb_ss_pc.h  regularized-coulomb_ss_pp.c  regularized-coulomb_ss_pp.h
src/kernels/regularized-yukawa/: regularized-yukawa.h  regularized-yukawa_cp.c  regularized-yukawa_cp.h  regularized-yukawa_direct.c  regularized-yukawa_direct.h  regularized-yukawa_pc.c  regularized-yukawa_pc.h  regularized-yukawa_pp.c  regularized-yukawa_pp.h  regularized-yukawa_ss_correction.c  regularized-yukawa_ss_correction.h  regularized-yukawa_ss_direct.c  regularized-yukawa_ss_direct.h  regularized-yukawa_ss_pc.c  regularized-yukawa_ss_pc.h  regularized-yukawa_ss_pp.c  regularized-yukawa_ss_pp.h
src/kernels/sin-over-r/: sin-over-r.h  sin-over-r_cp.c  sin-over-r_cp.h  sin-over-r_direct.c  sin-over-r_direct.h  sin-over-r_pc.c  sin-over-r_pc.h  sin-over-r_pp.c  sin-over-r_pp.h
src/kernels/tcf/: tcf.h  tcf_cp.c  (+9 more)
src/particles/: particles.c  particles.h  struct_particles.h
src/python-interface/: testTreecodeWrapper.py  treecodeWrappers.py
src/run_params/: run_params.c  run_params.h  struct_run_params.h
src/tree/: batches.c  batches.h  partition.c  partition.h  struct_nodes.h  struct_tree.h  struct_tree_linked_list_node.h  tree.c  tree.h  tree_linked_list.c  tree_linked_list.h
src/utilities/: advanced_timings.c  advanced_timings.h  array.h  enums.h  timers.c  timers.h  tools.c  tools.h
tests/: .gitignore  CMakeLists.txt  mpi_tests.c  run_all_tests.sh  serial_tests.c  testQuadratureWeights.c  tests.c
(+142 files in other folders)
